cabal-version: 2.4

name:                   bricki-reflex
version:                0.1.0.0
synopsis:               bricki-reflex
description:            bricki-reflex.
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Lennart Spitzner
maintainer:             hexagoxel@hexagoxel.de
copyright:              Lennart Spitzner
category:               Graphics
build-type:             Simple
extra-source-files:     ChangeLog.md

Flag demos
    Description:        Build demonstration programs
    Default:            False
    manual:             True

library
  exposed-modules:      Brick.ReflexMain
  build-depends:        base >= 4.9 && < 4.13
                      , containers
                      , microlens
                      , vty
                      , stm
                      , these
                      , brick >= 0.50 && < 0.51
                      , reflex
                      , reflex-host
                      , semialign
  hs-source-dirs:       src
  default-language:     Haskell2010

executable bricki-reflex-demo
  if !flag(demos)
    Buildable: False
  hs-source-dirs:       programs
  ghc-options:          -threaded -Wall
  default-extensions:   CPP
  default-language:     Haskell2010
  main-is:              ReflexDemo.hs
  build-depends:        base <= 5
                      , brick
                      , bricki-reflex
                      , vty >= 5.5.0
                      , data-default
                      , text
                      , microlens
                      , reflex
                      , reflex-host
                      , containers

executable bricki-reflex-custom-event-demo
  if !flag(demos)
    Buildable: False
  hs-source-dirs:       programs
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  main-is:              CustomEventDemo.hs
  build-depends:        base <= 5
                      , bricki
                      , bricki-reflex
                      , vty >= 5.5.0
                      , data-default
                      , text
                      , microlens >= 0.3.0.0
                      , microlens-th
                      , reflex
                      , reflex-host
                      , transformers

executable bricki-reflex-suspend-resume-demo
  if !flag(demos)
    Buildable: False
  hs-source-dirs:       programs
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  main-is:              SuspendAndResumeDemo.hs
  build-depends:        base <= 5
                      , bricki
                      , bricki-reflex
                      , vty >= 5.5.0
                      , data-default
                      , text
                      , microlens >= 0.3.0.0
                      , microlens-th
                      , reflex
                      , reflex-host
                      , transformers
